--- a/sensors/sensorhub-driver-template/build.gradle
+++ b/sensors/sensorhub-driver-template/build.gradle
@@ -21,7 +21,7 @@ test {
 osgi {
     manifest {
         attributes ('Bundle-Vendor': 'Botts Inc')
-        attributes ('Bundle-Activator': 'com.sample.impl.sensor.drivername.Activator')
+        attributes ('Bundle-Activator': 'com.sample.impl.sensor.simulated.Activator')
     }
 }
 
